# agent-skill-quality-gate

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md
src/agent_skill_quality_gate/: __init__.py  ablation.py  analyzer.py  cli.py  evaluation.py  models.py  parser.py  pruning.py  reporting.py
tests/: test_ablation.py  test_analyzer.py  test_cli.py  test_cli_commands.py  test_end_to_end.py  test_evaluation.py  test_parser.py  test_pruning.py  test_reporting.py
tests/fixtures/ablation/: cases.yaml  variants-revise.yaml  variants.yaml
tests/fixtures/ablation/skills/baseline/: SKILL.md
tests/fixtures/ablation/skills/bloated/: SKILL.md
tests/fixtures/ablation/skills/distilled/: SKILL.md
tests/fixtures/corpus/bloated/: SKILL.md
tests/fixtures/corpus/good/: SKILL.md
tests/fixtures/corpus/incomplete/: SKILL.md
tests/fixtures/corpus/unsafe/: SKILL.md
tests/fixtures/evaluation/: cases.yaml
tests/fixtures/evaluation/skills/incident-triage/: SKILL.md
tests/fixtures/skills/malformed/: SKILL.md
tests/fixtures/skills/missing-manifest/: SKILL.md
tests/fixtures/skills/non-markdown-reference/: SKILL.md
tests/fixtures/skills/unsafe-reference/: SKILL.md
tests/fixtures/skills/valid/incident-triage/: SKILL.md
tests/fixtures/skills/valid/incident-triage/references/: decision-checklist.md
tests/snapshots/: corpus_report.md
