[build-system]
requires = ["flit_core>=3.12,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "agent-skill-quality-gate"
version = "0.1.0"
description = "Local-first linting and deterministic evaluation for reusable AI skills."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["PyYAML>=6.0,<7"]

[project.scripts]
agent-skill-quality = "agent_skill_quality_gate.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.3,<9",
  "ruff>=0.12,<1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
